# siyadah-whatsapp-saas

./: .dockerignore  .env.example  .env.render.example  .eslintrc.json  .replit  DEPLOYMENT.md  Dockerfile  Dockerfile.render  README.md  RENDER_DEPLOYMENT_GUIDE.md  build-production.js  docker-compose.yml  git-with-node-22.16.0.sh  jest.config.js  npm-22.16.0  package-lock.json  package.json  postman-collection.json  pyproject.toml  render-deployment.md  render-start.js  render.yaml  replit.md  replit.nix  requirements_unified.txt  setup-dev.sh  setup_nodejs.sh  start-with-node-22.16.0.sh  test-chrome.js  users.json  webhook-storage.json  yarn-22.16.0
.husky/: pre-push
attached_assets/: Pasted--11-56-47-11-56-47-added-1726-packages-and-audited-1727-packages-in-56s-11-56-47-11-56-47-3-1755674681942_1755674681942.txt  Pasted--11-57-72-11-57-72-added-1726-packages-and-audited-1727-packages-in-58s-11-57-72-11-57-72-3-1755674284537_1755674284538.txt  Pasted--11-59-24-added-1726-packages-and-audited-1727-packages-in-59s-11-59-24-11-59-24-306-packages--1755672854802_1755672854803.txt  Pasted--11-60-90-npm-notice-11-60-90-npm-notice-New-major-version-of-npm-available-10-9-3-11-5-2-11-1755676715648_1755676715648.txt  Pasted--11-61-82-11-61-82-added-1726-packages-and-audited-1727-packages-in-1m-11-61-82-11-61-82-30-1755677034762_1755677034763.txt  Pasted--11-63-16-To-address-all-issues-possible-including-breaking-changes-run-11-63-16-npm-audit-f-1755591616302_1755591616304.txt  Pasted--repo-siyadah-whatsapp-saas-git-push-pre-push--1755678412991_1755678412992.txt  (+27 more)
server/: seed.ts  (+38 more)
(+74 files in other folders)
