[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=4.3.0",
    "colorama>=0.4.6",
    "fastapi>=0.115.13",
    "flask>=3.1.1",
    "pillow>=11.2.1",
    "pydantic>=2.11.7",
    "python-multipart>=0.0.20",
    "qrcode>=8.2",
    "requests>=2.32.4",
    "uvicorn>=0.34.3",
]
